[gd_scene load_steps=55 format=3 uid="uid://bfjbvlgj6rdr5"]

[ext_resource type="Script" uid="uid://c4ep8xtbibk1c" path="res://Scripts/personaje.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://bl0g2yhhpu6y0" path="res://Scripts/main.gd" id="1_4c57u"]
[ext_resource type="Script" uid="uid://le4u3wn4uiya" path="res://Scripts/bananero.gd" id="2_kek77"]
[ext_resource type="Texture2D" uid="uid://b2uyqek0w6plc" path="res://Assets/Bananero (1).png" id="2_w48qg"]
[ext_resource type="Script" uid="uid://dydsnb212aonn" path="res://Scripts/mono_obrero.gd" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://c0hrrmdvhe06v" path="res://banana.tscn" id="3_4c57u"]
[ext_resource type="Script" uid="uid://beossotsjj8ru" path="res://Scripts/area_2d_central.gd" id="4_kek77"]
[ext_resource type="Texture2D" uid="uid://bek4gvs08e8ql" path="res://Assets/Bananero (2).png" id="5_vivmo"]
[ext_resource type="Texture2D" uid="uid://3x05ldrt4jgi" path="res://Assets/Fabrica (1).png" id="8_2cqfq"]
[ext_resource type="Texture2D" uid="uid://c1k7r7bppdbf2" path="res://Assets/Fabrica 2DA.png" id="9_yaehf"]
[ext_resource type="Texture2D" uid="uid://cvui8irhim7jd" path="res://Assets/Fabrica 3RA.png" id="10_074og"]
[ext_resource type="Texture2D" uid="uid://jky0p3dijsyu" path="res://Assets/run_bananzas_WIP_V1_PGJ_2025-Sheet.png" id="11_yaehf"]
[ext_resource type="Texture2D" uid="uid://b18opjkhrlndn" path="res://Assets/Idle _bananzas_WIP_V2_PGJ_2025-Sheet.png" id="12_074og"]
[ext_resource type="Texture2D" uid="uid://bftnddqwnrs8" path="res://Assets/piso_pasto.png" id="12_w48qg"]
[ext_resource type="Texture2D" uid="uid://vys5y1eg8sin" path="res://Assets/jump_bananzas_WIP_V1_PGJ_2025-Sheet.png" id="13_cegan"]
[ext_resource type="Texture2D" uid="uid://3u8laom0vs6h" path="res://Assets/mono_corriendo-sheet.png" id="14_vivmo"]
[ext_resource type="Texture2D" uid="uid://ce451mqpm0rap" path="res://Assets/Mono_escalando-sheet.png" id="15_2cqfq"]
[ext_resource type="Script" uid="uid://b8a5odmllbdet" path="res://Scripts/bombardero.gd" id="18_074og"]
[ext_resource type="Texture2D" uid="uid://1qyrtg32wekd" path="res://Assets/mono_protector (4).png" id="19_getpj"]
[ext_resource type="Texture2D" uid="uid://bybga0cr7ht2u" path="res://Assets/mono_protector (3).png" id="20_ryguw"]
[ext_resource type="Texture2D" uid="uid://c7r0kl2aps1b0" path="res://Assets/Mono protector durmiendo-Sheet.png" id="21_d13ii"]
[ext_resource type="Texture2D" uid="uid://btr4gt12eendu" path="res://Assets/pila_de_bananas.png" id="22_ryguw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mycd"]
size = Vector2(1286.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vw27"]
size = Vector2(175, 227)

[sub_resource type="SpriteFrames" id="SpriteFrames_dg77c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_2cqfq")
}],
"loop": true,
"name": &"primera",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_yaehf")
}],
"loop": true,
"name": &"segunda",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_074og")
}],
"loop": true,
"name": &"tercera",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_getpj"]
atlas = ExtResource("11_yaehf")
region = Rect2(0, 0, 220, 220)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryguw"]
atlas = ExtResource("11_yaehf")
region = Rect2(220, 0, 220, 220)

[sub_resource type="AtlasTexture" id="AtlasTexture_d13ii"]
atlas = ExtResource("11_yaehf")
region = Rect2(440, 0, 220, 220)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u8w0"]
atlas = ExtResource("11_yaehf")
region = Rect2(660, 0, 220, 220)

[sub_resource type="AtlasTexture" id="AtlasTexture_0odxb"]
atlas = ExtResource("11_yaehf")
region = Rect2(880, 0, 220, 220)

[sub_resource type="AtlasTexture" id="AtlasTexture_lswn8"]
atlas = ExtResource("11_yaehf")
region = Rect2(1100, 0, 220, 220)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6jrf"]
atlas = ExtResource("12_074og")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuqvo"]
atlas = ExtResource("12_074og")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsp4k"]
atlas = ExtResource("12_074og")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq58d"]
atlas = ExtResource("12_074og")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_seu75"]
atlas = ExtResource("13_cegan")
region = Rect2(0, 0, 220, 220)

[sub_resource type="AtlasTexture" id="AtlasTexture_htxhm"]
atlas = ExtResource("13_cegan")
region = Rect2(220, 0, 220, 220)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq2sk"]
atlas = ExtResource("13_cegan")
region = Rect2(440, 0, 220, 220)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k2k6"]
atlas = ExtResource("13_cegan")
region = Rect2(660, 0, 220, 220)

[sub_resource type="SpriteFrames" id="SpriteFrames_1bvp3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_getpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryguw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d13ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u8w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0odxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lswn8")
}],
"loop": true,
"name": &"correr",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6jrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuqvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsp4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq58d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_seu75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq2sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k2k6")
}],
"loop": true,
"name": &"saltar",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(48, 90.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kek77"]
size = Vector2(56, 96.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaehf"]
atlas = ExtResource("14_vivmo")
region = Rect2(0, 0, 344, 345)

[sub_resource type="AtlasTexture" id="AtlasTexture_074og"]
atlas = ExtResource("14_vivmo")
region = Rect2(0, 345, 344, 345)

[sub_resource type="AtlasTexture" id="AtlasTexture_cegan"]
atlas = ExtResource("15_2cqfq")
region = Rect2(0, 0, 344, 345)

[sub_resource type="AtlasTexture" id="AtlasTexture_82xsv"]
atlas = ExtResource("15_2cqfq")
region = Rect2(0, 345, 344, 345)

[sub_resource type="SpriteFrames" id="SpriteFrames_7mycd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaehf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_074og")
}],
"loop": true,
"name": &"caminar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cegan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82xsv")
}],
"loop": true,
"name": &"escalar",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_272bh"]
size = Vector2(106, 114)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rl1p"]
atlas = ExtResource("20_ryguw")
region = Rect2(0, 0, 344, 345)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok6jj"]
atlas = ExtResource("21_d13ii")
region = Rect2(0, 0, 344, 345)

[sub_resource type="AtlasTexture" id="AtlasTexture_facbu"]
atlas = ExtResource("21_d13ii")
region = Rect2(344, 0, 344, 345)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1qrp"]
atlas = ExtResource("21_d13ii")
region = Rect2(688, 0, 344, 345)

[sub_resource type="AtlasTexture" id="AtlasTexture_come4"]
atlas = ExtResource("21_d13ii")
region = Rect2(1032, 0, 344, 345)

[sub_resource type="SpriteFrames" id="SpriteFrames_h8e4i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_getpj")
}],
"loop": true,
"name": &"ataque",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rl1p")
}, {
"duration": 1.0,
"texture": ExtResource("19_getpj")
}],
"loop": false,
"name": &"despierta",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok6jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_facbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1qrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_come4")
}],
"loop": true,
"name": &"durmiendo",
"speed": 5.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_4c57u")

[node name="Bananero" type="Sprite2D" parent="."]
position = Vector2(99, 398)
texture = ExtResource("2_w48qg")
script = ExtResource("2_kek77")
banana_scene = ExtResource("3_4c57u")

[node name="Bananero2" type="Sprite2D" parent="."]
position = Vector2(878, 398)
texture = ExtResource("5_vivmo")
script = ExtResource("2_kek77")
banana_scene = ExtResource("3_4c57u")

[node name="Piso" type="StaticBody2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso"]
position = Vector2(608, 574)
shape = SubResource("RectangleShape2D_7mycd")

[node name="Pastos_izquierda" type="Node" parent="Piso"]

[node name="Pasto_1" type="Sprite2D" parent="Piso/Pastos_izquierda"]
position = Vector2(61.5, 582)
texture = ExtResource("12_w48qg")
region_enabled = true
region_rect = Rect2(0, 0, 147, 116.163)

[node name="Pasto_2" type="Sprite2D" parent="Piso/Pastos_izquierda"]
position = Vector2(208.5, 582.5)
texture = ExtResource("12_w48qg")
region_enabled = true
region_rect = Rect2(-0.107764, 116.659, 147.237, 115.507)

[node name="Pasto_3" type="Sprite2D" parent="Piso/Pastos_izquierda"]
position = Vector2(355.5, 582)
texture = ExtResource("12_w48qg")
region_enabled = true
region_rect = Rect2(-0.107764, 232.793, 147.237, 115.357)

[node name="Pasto_4" type="Sprite2D" parent="Piso/Pastos_izquierda"]
position = Vector2(502.5, 582.1)
texture = ExtResource("12_w48qg")
region_enabled = true
region_rect = Rect2(-0.107764, 232.793, 147.237, 115.357)

[node name="Pastos_derecha" type="Node" parent="Piso"]

[node name="Pasto_1" type="Sprite2D" parent="Piso/Pastos_derecha"]
position = Vector2(649, 582)
texture = ExtResource("12_w48qg")
region_enabled = true
region_rect = Rect2(0, 0, 147, 116.163)

[node name="Pasto_2" type="Sprite2D" parent="Piso/Pastos_derecha"]
position = Vector2(796, 582.5)
texture = ExtResource("12_w48qg")
region_enabled = true
region_rect = Rect2(-0.107764, 116.659, 147.237, 115.507)

[node name="Pasto_3" type="Sprite2D" parent="Piso/Pastos_derecha"]
position = Vector2(943, 582)
texture = ExtResource("12_w48qg")
region_enabled = true
region_rect = Rect2(-0.107764, 232.793, 147.237, 115.357)

[node name="Pasto_4" type="Sprite2D" parent="Piso/Pastos_derecha"]
position = Vector2(1090, 582.1)
texture = ExtResource("12_w48qg")
region_enabled = true
region_rect = Rect2(-0.107764, 232.793, 147.237, 115.357)

[node name="Area2D_Central" type="Area2D" parent="."]
position = Vector2(423, 301)
collision_layer = 128
collision_mask = 4
script = ExtResource("4_kek77")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Central"]
position = Vector2(138.5, 146.5)
shape = SubResource("RectangleShape2D_5vw27")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D_Central"]
position = Vector2(140, 130)
sprite_frames = SubResource("SpriteFrames_dg77c")
animation = &"primera"

[node name="Mejoraste_a_nivel_2" type="Label" parent="Area2D_Central"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "¡Bien! Mejoraste a nivel 2"

[node name="Mejoraste_a_nivel_3" type="Label" parent="Area2D_Central"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "¡Felicitaciones! Mejoraste a nivel 3"

[node name="Personaje" type="CharacterBody2D" parent="." groups=["player"]]
z_index = 1
position = Vector2(612, 267)
collision_layer = 4
collision_mask = 201
script = ExtResource("1_0xm2m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Personaje"]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_1bvp3")
animation = &"saltar"
frame = 2
frame_progress = 0.8765

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personaje"]
position = Vector2(-4, 1.75)
shape = SubResource("RectangleShape2D_lquwl")

[node name="Area2D" type="Area2D" parent="Personaje"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personaje/Area2D"]
position = Vector2(-4, -0.25)
shape = SubResource("RectangleShape2D_kek77")

[node name="Mono_obrero" type="CharacterBody2D" parent="."]
position = Vector2(816, 402)
scale = Vector2(0.5, 0.5)
collision_layer = 2
script = ExtResource("3_1bvp3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Mono_obrero"]
sprite_frames = SubResource("SpriteFrames_7mycd")
animation = &"caminar"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mono_obrero"]
position = Vector2(-9, 79)
shape = SubResource("RectangleShape2D_272bh")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="HUD"]
offset_left = 952.0
offset_top = 24.0
offset_right = 992.0
offset_bottom = 47.0
text = "aaaaaaa"

[node name="Bombardero" type="CharacterBody2D" parent="."]
position = Vector2(1087, 202)
script = ExtResource("18_074og")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Bombardero"]
sprite_frames = SubResource("SpriteFrames_h8e4i")
animation = &"ataque"
flip_h = true

[node name="Lanza_bomba" type="AudioStreamPlayer2D" parent="Bombardero"]

[node name="Pila" type="StaticBody2D" parent="."]

[node name="Pila_de_bananas" type="Sprite2D" parent="Pila"]
position = Vector2(1049, 404)
texture = ExtResource("22_ryguw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pila"]
polygon = PackedVector2Array(900, 551, 894, 493, 926, 449, 999, 372, 1068, 358, 1110, 358, 1135, 370, 1154, 415, 1154, 458, 1178, 491, 1205, 523, 1193, 552, 1055, 568)

[connection signal="body_entered" from="Personaje/Area2D" to="Personaje" method="_on_area_2d_body_entered"]
